Updated content. Added solutions, technology, career sections

--- a/_includes/team.html
+++ b/_includes/team.html
@@ -30,7 +30,9 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                    <p class="large text-muted">Matineh has years of experience and demonstrated leadership in developing full-scale machine-learning software for energy markets and energy systems. She has developed software products that have found market success in the energy space and is a recognized expert in power markets and software. Before Watt-Learn, Matineh was the Director of Data Science in an Energy Management startup where she led development of the company’s AI platform for energy wholesale market intelligence. She completed her Ph.D. in Civil and Environmental Engineering at Carnegie Mellon University, where she developed AI software for proactive diagnosis of energy systems. She has been leading Watt-Learn’s technology since May 2017.</p>
+                    <p class="large text-muted">Puneeth is cool.</p>
+                    <p class="large text-muted">Bo is a chick with flowers.</p>
                 </div>
             </div>
         </div>
