--- a/_includes/header.html
+++ b/_includes/header.html
@@ -47,7 +47,7 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">welcome to energy storage's grey matter</div>
+                <div class="intro-lead-in">welcome to autonomous enegy storage</div>
                 <div class="intro-heading">watt-learn</div>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
