--- a/_includes/team.html
+++ b/_includes/team.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Our Amazing Team</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted"></h3>
                 </div>
             </div>
             <div class="row">
@@ -32,7 +32,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <p class="large text-muted">Matineh has years of experience and demonstrated leadership in developing full-scale machine-learning software for energy markets and energy systems. She has developed software products that have found market success in the energy space and is a recognized expert in power markets and software. Before Watt-Learn, Matineh was the Director of Data Science in an Energy Management startup where she led development of the company’s AI platform for energy wholesale market intelligence. She completed her Ph.D. in Civil and Environmental Engineering at Carnegie Mellon University, where she developed AI software for proactive diagnosis of energy systems. She has been leading Watt-Learn’s technology since May 2017.</p>
                     <p class="large text-muted">Puneeth is cool.</p>
-                    <p class="large text-muted">Bo is a chick with flowers.</p>
+                    <p class="large text-muted">Bo's background is in high energy physics working on recreating moments after the big bang using experiments at CERN. Shortly after, he tried his luck in the energy field as a embedded engineer at Stem Inc. to control behind the meter storage. Since, Bo has been a consultant for several enegy startups before landing softly at Watt-Learn.</p>
                 </div>
             </div>
         </div>
