--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,6 @@
     {% include about.html %}
     {% include team.html %}
     {% include career_grid.html %}
-    {% include clients.html %}
     {% include contact.html %}
     {% include footer.html %}
     {% include modals.html %}
@@ -20,3 +19,5 @@
 
     </body>
 </html>
+
+    <!-- {% include clients.html %} -->
