--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,9 +4,48 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About</h2>
-                    <h3 class="section-subheading text-muted">Watt-Learn is a software-as-a-service (SaaS) startup raised from Carnegie Mellon University (CMU). The founders; Julian Lamy and Matineh Eybpoosh, have decades of combined experience in applying AI and optimization for optimal operation of energy systems, power wholesale market, development and operation of energy storage and renewable projects, and data-driven diagnosis of energy systems.</h3>  
-                    <h3 class="section-subheading text-muted">On November 2018, Watt-Learn joined forces with one of the leader energy equity investment firms in the country. Watt-Learn will be operating a large pipeline of front-of-the-meter projects across the US to maximize the ROI for the shareholders.</h3>
+                    <h3 class="section-subheading text-muted"></h3>  
                 </div>
             </div>
-        </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <ul class="timeline">
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>Humble beginnings</h4>
+                                    <h4 class="subheading">2017</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Watt-Learn is a software-as-a-service (SaaS) startup raised from Carnegie Mellon University (CMU). The founders; Julian Lamy and Matineh Eybpoosh, have decades of combined experience in applying AI and optimization for optimal operation of energy systems, power wholesale market, development and operation of energy storage and renewable projects, and data-driven diagnosis of energy systems.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>Partnership</h4>
+                                    <h4 class="subheading">November 2018</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">On November 2018, Watt-Learn joined forces with one of the leader energy equity investment firms in the country. Watt-Learn will be operating a large pipeline of front-of-the-meter projects across the US to maximize the ROI for the shareholders.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <h4>Be Part
+                                    <br>Of Ourf 
+                                    <br>Story!</h4>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
     </section>
