--- a/_includes/solutions.html
+++ b/_includes/solutions.html
@@ -55,9 +55,9 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <h4>Be Part
-                                    <br>Of Our
-                                    <br>Story!</h4>
+                                <h4>Stay Tuned
+                                    <br>for New
+                                    <br>Solutions!</h4>
                             </div>
                         </li>
                     </ul>
