--- a/_includes/technology.html
+++ b/_includes/technology.html
@@ -13,7 +13,7 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-bar-chart fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">AI</h4>
+                    <h4 class="service-heading"></h4>
                     <p class="text-muted">Taking advantage of AI and Optimization solutions, our PLAAS technology offers proactive and optimal solutions for often-conflicting objectives derived by Energy Systems constraints, Energy Market dynamics, Economic & Operational objectives, and even uncertainties rooted in Human Behavior.</p>
                 </div>
                 <div class="col-md-4">
@@ -21,7 +21,7 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-balance-scale fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Balance</h4>
+                    <h4 class="service-heading"></h4>
                     <p class="text-muted">Watt-Learn’s technology is the first and only solution to balance between three Pilars of battery economy: The overall life of the project, the cost associated with the project, and the total value generated from the project.</p>
                 </div>
                 <div class="col-md-4">
@@ -29,7 +29,7 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-dollar fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Revenue</h4>
+                    <h4 class="service-heading"></h4>
                     <p class="text-muted">Batteries equipped with Watt-Learn’s technology can generate 50%-150% more savings/revenue, while cycling 30%-65% less.</p>
                 </div>
             </div>
