fixed 1st round of fixes

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -20,7 +20,7 @@
                                     <h4 class="subheading">2017</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Watt-Learn is a software-as-a-service (SaaS) startup raised from Carnegie Mellon University (CMU). The founders; Julian Lamy and Matineh Eybpoosh, have decades of combined experience in applying AI and optimization for optimal operation of energy systems, power wholesale market, development and operation of energy storage and renewable projects, and data-driven diagnosis of energy systems.</p>
+                                    <p class="text-muted">Watt-Learn is a startup raised from Pittsburgh, Carnegie Mellon University (CMU). The founders, <a href="http://www.linkedin.com/blabla"> Julian Lamy</a> and <a href="https://www.linkedin.com/in/matineh-eybpoosh-647b5134">Matineh Eybpoosh</a>, have decades of combined experience in tackling some of the most challenging problems in energy space. In 2016, through his studies of energy storage markets, Julian realises that one very important factor is missing for batteries: intelligence. Current batteries are simply too dumb to be profitable. Combining their multidisciplinary background, Julian and Matineh form a unique solution to address this very issue.<br/><br/>Watt-Learn founders have their signature on many state-of-the-art solutions and products that have found market success in the industry. Their experience ranges from applying AI and optimization for optimal operation of energy systems, different power markets, development and operation of energy storage and renewable projects, as well as data-driven diagnosis of energy systems.</p>
                                 </div>
                             </div>
                         </li>
@@ -30,18 +30,18 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Partnership</h4>
-                                    <h4 class="subheading">November 2018</h4>
+                                    <h4>Our Journey</h4>
+                                    <h4 class="subheading">2018</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">On November 2018, Watt-Learn joined forces with one of the leader energy equity investment firms in the country. Watt-Learn will be operating a large pipeline of front-of-the-meter projects across the US to maximize the ROI for the shareholders.</p>
+                                    <p class="text-muted">Watt-Learn have been part of AlphaLab accelerator, as well as Plug & Play, where it won the People’s Choice Award as the best energy startup. Watt-Learn was invited to present at Energy Storage Summit held by Green Tech Media in 2017, was a finalist startup presenter at VERGE conference, and has won the first place at TransTech Energy Business Development Competition at <a href="https://www.linkedin.com/school/19232/?legacySchoolId=19232">Carnegie Mellon University</a>, to name a few.<br/><br/>On November 2018, Watt-Learn joined forces with one of the leader energy investment companies in the country. Thanks to this partnership, Watt-Learn’s software will be operating a large pipeline of front-of-the-meter projects across the US to maximize the ROI for the shareholders.</p>
                                 </div>
                             </div>
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
                                 <h4>Be Part
-                                    <br>Of Ourf 
+                                    <br>Of Our 
                                     <br>Story!</h4>
                             </div>
                         </li>
