--- a/_includes/solutions.html
+++ b/_includes/solutions.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Solutions</h2>
-                    <h3 class="section-subheading text-muted">Watt-Learn has recently joined forces with one of the leader energy equity investors in the country. As a result of this partnership, the availability of any of the following offerings is decided on case-by-case basis. Please don’t hesitate to reach out if you are interested in any of these solutions.</h3>
+                    <h3 class="section-subheading text-muted">As a result of a recent partnerships, availability of any of the following offerings is determined on case-by-case basis. Please don’t hesitate to reach out if you are interested in any of ur solutions.</h3>
                 </div>
             </div>
             <div class="row">
@@ -17,10 +17,11 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>Battery Performance Audit</h4>
-                                    <h4 class="subheading">existing projects</h4>
+                                    <h6>existing projects</h6>
+                                    <!-- <h6 class="subheading">existing projects</h4> -->
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">If you wonder what our PLAAS solution can do for your project, and what is the size of unrealized opportunity left on the table, this is a service you would benefit from. We will work closely with you to customize our PLAAS solution to your project’s specifications. Going back in time, we will apply PLAAS on your project and demonstrate, in detail, the value that could have been generated for your project in variety of revenue streams (e.g., revenue/ saving, lifetime, cycles, etc.).</p>
+                                    <p class="text-muted">If you wonder what our PLAAS solution can do and what the size of unrealized opportunity is for your project, this is a service you would benefit from. We will work closely with you to customize our PLAAS solution to your project’s specifications and needs. We will go back in time and simulate the operation of your project using PLAAS with different configurations to demonstrate the value that could have been generated for your project in variety of scenarios (e.g., revenue/ saving, lifetime, cycles, etc.).</p>
                                 </div>
                             </div>
                         </li>
@@ -31,10 +32,10 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>Real-time Recommendations</h4>
-                                    <h4 class="subheading">existing projects</h4>
+                                    <h6 class="subheading">existing projects</h6>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">If you feel that PLAAS is a right solution for your project (either because the results from the Battery Performance Audit is suggesting so, or because you believe in science and think that there must be a more intelligent way of operating batteries than the current state of the industry), BUT still prefer to have the control over operation of your battery project, this solution is for you. You will receive a forward-looking dispatch setpoints, on realtime basis, which act as recommendations that can be either incorporated into the battery control system, or used to shadow the existing strategies. </p>
+                                    <p class="text-muted">If you feel that PLAAS is a right solution for your project (either because the results from the Battery Performance Audit is suggesting so, or because you believe in science!), but still prefer to have the control of your battery’s operation in your own hands, then this solution is for you. You will receive a forward-looking dispatch setpoints, on realtime basis, which act as recommendations that can be either incorporated into the battery control system, or used to shadow the existing strategies.</p>
                                 </div>
                             </div>
                         </li>
@@ -45,11 +46,10 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>Proactive Lifetime-Aware Automation System (PLAAS)</h4>
-                                    <h4 class="subheading">existing and future projects</h4>
+                                    <h6 class="subheading">existing and future projects</h6>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">If you want to maximize your battery project, this solution is for you. PLAAS serves as an intelligence layer on top of the existing battery control system. PLAAS sends proactive setpoints to your battery’s management system to maximize a customized set of objectives for your very specific project (e.g., revenue/ savings, number of cycles, lifetime, carbon footprint, etc. or a combination of all). Our solution is non-intrusive, technology agnostic, and cloud-based. 
-</p>
+                                    <p class="text-muted">PLAAS is here to maximize the value of your battery project. PLAAS serves as an intelligence layer on top of the existing battery control system. It sends proactive setpoints to your battery’s management system to maximize a customized set of objectives for your very specific project (e.g., revenue/ savings, number of cycles, lifetime, carbon footprint, etc. or a combination of all). Our solution is non-intrusive, technology agnostic, and cloud-based.</p>
                                 </div>
                             </div>
                         </li>
