--- a/_includes/technology.html
+++ b/_includes/technology.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Technology</h2>
-                    <h3 class="section-subheading text-muted">At Watt-Learn, we are taking a multi-disciplinary approach to turn grid batteries into smart participants of the electricity grid.</h3>
+                    <h3 class="section-subheading text-muted">At Watt-Learn, we are taking a multi-disciplinary approach to turn grid batteries into smart participants of the electricity grid using Proactive Lifetime-Aware Automation System (PLAAS)</h3>
                 </div>
             </div>
             <div class="row text-center">
