holy guacamole, pixel pushing is brutal, added pictures

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,6 +9,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+                <a  href="#page-top">
+                    <img src="img/logos/logo.png" style="max-width:100%;" class="navbar-brand page-scroll img-responsive" alt="">
+                </a>
                 <a class="navbar-brand page-scroll" href="#page-top">{{site.title}}</a>
             </div>
 
@@ -47,8 +50,9 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">welcome to clever enegy storage</div>
-                <div class="intro-heading">watt-learn</div>
+                <div class="intro-lead-in text-primary">welcome to clever enegy storage</div>
+                <!-- <div class="intro-heading text-primary">watt-learn</div> -->
+                    <img src="img/logos/logo.png" style="max-width:100%;margin-bottom:30px" class="img-centered img-responsive" alt="">
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
