--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -208,9 +208,9 @@ fieldset[disabled] .btn-xl.active {
 .navbar-default .nav li a {
     text-transform: uppercase;
     font-family: {{ site.data.template.font.primary }};
-    font-weight: 400;
+    font-weight: 200;
     letter-spacing: 1px;
-    color: #fff;
+    color: #{{ site.data.template.color.primary }};
     -webkit-transition: all ease .35s;
     -moz-transition: all ease .35s;
     transition: all ease .35s;
@@ -312,7 +312,7 @@ header .intro-text .intro-heading {
         font-family: {{ site.data.template.font.secondary }};
         font-size: 30px;
         font-style: italic;
-        font-weight: 100;
+        font-weight: 150;
         line-height: 30px;
     }
 
@@ -537,10 +537,12 @@ section h3.section-subheading {
 .timeline .timeline-heading h4 {
     margin-top: 0;
     color: inherit;
+    font-weight: 150;
 }
 
 .timeline .timeline-heading h4.subheading {
     text-transform: none;
+    font-weight: 100;
 }
 
 .timeline .timeline-body>p,
