--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -15,16 +15,19 @@
                             <h2>{{ post.title }}</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
-                            <p class="text-left">{{ post.description }}</p>
-                            <ul class="list-inline item-details">
-                                <li class="text-left">Available:
-                                    <strong>{{ post.project-date }}
-                                    </strong>
+                            <ul class="list-group item-details text-left">
+                                <li>
+                                    Role:
+                                    <p>{{ post.description }}</p>
                                 </li>
-                                <li class="text-left">General Requirements:
+                                <li>
+                                    Available: <strong>{{ post.project-date }}<br/><br/></strong>
+                                </li>
+                                <li>
+                                    General Requirements:
                                     <p>{{ post.general-reqs }}</p>
                                 </li>
-                                <li class="text-left">Experience and Knowledge:
+                                <li>Experience and Knowledge:
                                     <p>{{ post.experience }}</p>
                                 </li>
                             </ul>
