fixed some template errors

--- a/_includes/career_grid.html
+++ b/_includes/career_grid.html
@@ -23,7 +23,9 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/{{ post.thumbnail }}" class="img-responsive img-centered" alt="">
+                        <div class="career">
+                            <img src="img/portfolio/{{ post.thumbnail }}" class="img-responsive img-centered img-circle" alt="">
+                        </div>
                     </a>
                     <div class="portfolio-caption">
                         <h4>{{ post.title }}</h4>
