fixed small text stuff and move the wattlearn logo up

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -50,9 +50,9 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in text-primary">welcome to clever enegy storage</div>
+                <div class="intro-lead-in text-primary">intelligent energy storage for a sustainable grid</div>
                 <!-- <div class="intro-heading text-primary">watt-learn</div> -->
-                    <img src="img/logos/logo.png" style="max-width:100%;margin-bottom:30px" class="img-centered img-responsive" alt="">
+                    <img src="img/logos/logo.png" style="max-width:100%;margin-bottom:100px" class="img-centered img-responsive" alt="">
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
