fixed a bunch of the todos

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
                 <a  href="#page-top">
                     <img src="img/logos/logo.png" style="max-width:100%;" class="navbar-brand page-scroll img-responsive" alt="">
                 </a>
-                <a class="navbar-brand page-scroll" href="#page-top">{{site.title}}</a>
+                <!--<a class="navbar-brand page-scroll" href="#page-top">{{site.title}}</a>-->
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
