--- a/_includes/about.html
+++ b/_includes/about.html
@@ -16,8 +16,8 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Humble beginnings</h4>
-                                    <h4 class="subheading">2017</h4>
+                                    <h4>Where it all started</h4>
+                                    <h4 class="subheading">2016</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Watt-Learn is a startup raised from Pittsburgh, <a href="https://www.cmu.edu">Carnegie Mellon University</a> (CMU). The founders, <a href="https://www.linkedin.com/in/julianlamy/"> Julian Lamy</a> and <a href="https://www.linkedin.com/in/matineh-eybpoosh-647b5134">Matineh Eybpoosh</a>, have decades of combined experience in tackling some of the most challenging problems in energy space. In 2016, through his studies of energy storage markets, Julian realises that one very important factor is missing for batteries: intelligence. Current batteries are simply too dumb to be profitable. Combining their multidisciplinary background, Julian and Matineh form a unique solution to address this very issue.<br/><br/>Watt-Learn founders have their signature on many state-of-the-art solutions and products that have found market success in the industry. Their experience ranges from applying AI and optimization for optimal operation of energy systems, different power markets, development and operation of energy storage and renewable projects, as well as data-driven diagnosis of energy systems.</p>
