--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,22 +22,22 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Technology</a>
+                        <a class="page-scroll" href="#services">{{ site.tech.title }}</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#solutions">Solutions</a>
+                        <a class="page-scroll" href="#solutions">{{ site.solutions.title }}</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#about">{{ site.about.title }}</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#team">Team</a>
+                        <a class="page-scroll" href="#team">{{ site.team.title }}</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Career</a>
+                        <a class="page-scroll" href="#portfolio">{{ site.career.title }}</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#contact">{{ site.contact.title }}</a>
                     </li>
                 </ul>
             </div>
@@ -50,8 +50,8 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in text-primary">intelligent energy storage for a sustainable grid</div>
-                <!-- <div class="intro-heading text-primary">watt-learn</div> -->
+                <div class="intro-lead-in text-primary">{{ site.subtitle }}</div>
+                <!-- <div class="intro-heading text-primary">{{ site.title }}</div> -->
                     <img src="img/logos/logo.png" style="max-width:100%;margin-bottom:100px" class="img-centered img-responsive" alt="">
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
