--- a/_includes/career_grid.html
+++ b/_includes/career_grid.html
@@ -3,15 +3,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Career Opportunities</h2>
-                    <h3 class="section-subheading text-muted">
-                        <p>As an award-winning clean-tech startup, Watt-Learn is developing revolutionary AI-based software for the next generation of energy storage battery projects that will optimize the growth of renewable energy and reduce mankind’s reliance on fossil fuels.
-                        <br /><br />
-                        We are looking for champions who are excited to make meaningful impacts on our mission by being part of Watt-Learn’s story in solving some of the world’s most pressing environmental challenges.
-                        <br /><br />
-                        Watt-Learn is a startup founded by energy and software enthusiasts from Carnegie Mellon University and is now backed by one of the largest private energy investors in the country. That means Watt-Learn employees get the best of both worlds: security and benefits of a well-funded and stable company, and the excitement, visibility and growth opportunities of being part of a fast-growing and innovative startup.
-                        </p>
-                    </h3>
+                    <h2 class="section-heading">{{ site.career.alt_title }}</h2>
+                    <h3 class="section-subheading text-muted">{{ site.career.subtitle }}</h3>
                 </div>
             </div>
             <div class="row">
