--- a/_includes/team.html
+++ b/_includes/team.html
@@ -3,12 +3,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Our Amazing Team</h2>
-                    <h3 class="section-subheading text-muted"></h3>
+                    <h2 class="section-heading">{{ site.team.alt_title }}</h2>
+                    <h3 class="section-subheading text-muted">{{ site.team.subtitle }}</h3>
                 </div>
             </div>
             <div class="row">
-                {% for member in site.people %}
+                {% for member in site.team.people %}
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img src="img/team/{{ member.pic }}.jpg" class="img-responsive img-circle" alt="">
