updated head to reflect absolute image path

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,7 @@
     <meta property="og:type" content="website" />
     <meta property='og:description' content="{{ site.description }}"/>
     <meta property="og:url" content="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}" />
-    <meta property="og:image" content="{{ site.header_image }}" />
+    <meta property="og:image" content="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}{{ site.header_image }}" />
 
 
     <!-- Custom CSS & Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
